# aiDoom

./: .gitattributes  .gitignore  AGENT_CONTROL.md  AIDOOM_PARAMETERS.md  AIPLAYER.md  AI_IMPROVEMENTS.md  BOOM_COMPAT.md  BUDDY_HUD.md  BUDDY_PORTING.md  BUDDY_VOICE.md  CLAUDE.md  CMakeLists.txt  DIRECTOR_MODES.md  GPUMON.md  HD_TEXTURES.md  HERETIC_HEXEN.md  HERETIC_SUPPORT_PLAN.md  LEGACY_FIXES.md  MBF21_PORT.md  MONSTER_AGENT_GUIDE.md  Pathfinding.md  README.md  VISIBILITY_CACHE.md  buddydoom.desktop  buddydoom.icns  build.sh  build_all_win.bat  build_win.ps1  build_win.sh  doom_agent_api_architecture.md  doom_agent_api_vizdoom.md  gpumon.py  monster_llm_control.md  ollama_director.py
docs/: AGENT_CONTROL.md  AIPLAYER.md  AI_IMPROVEMENTS.md  BOOM_COMPAT.md  BUDDYDOOM_PARAMETERS.md  BUDDY_HUD.md  BUDDY_PORTING.md  BUDDY_VOICE.md  Collision.md  DIRECTOR_MODES.md  GPUMON.md  HD_TEXTURES.md  HERETIC_HEXEN.md  HERETIC_SUPPORT_PLAN.md  INVENTORY.md  LEGACY_FIXES.md  MBF21_PORT.md  MONSTER_AGENT_GUIDE.md  Pathfinding.md  UDMF_IMPLEMENTATION_PLAN.md  VISIBILITY_CACHE.md  YAPB_ARCHITECTURE.md  buddydoom_features_report.md  doom_agent_api_architecture.md  doom_agent_api_vizdoom.md  monster_llm_control.md
docs/ID24 0.99.1/: DEMOLOOP formal specification 0.99.1.docx  Finale lumps formal specification 0.99.1.docx  GAMECONF formal specification 0.99.1.docx  ID24 Mapping Additions formal specification 0.99.1.docx  ID24 formal specification 0.99.1.docx  ID24HACKED formal specification 0.99.1.docx  ID24HACKED hashing formal specification 0.99.1.docx  Implementation cheat sheet 0.99.1.xlsx  Interlevel Lumps formal specification 0.99.1.docx  JSON Lump formal specification 1.0.0.docx  SBARDEF formal specification 0.99.1.docx  SKYDEFS formal specification 0.99.1.docx  Translations formal specification 0.99.1.docx
files/: Makefile.in  Makefile.msvc  aidoom.rc  aidoom_icon.h  aidoom_version.h  am_map.c  buddydoom.rc  buddydoom_icon.h  buddydoom_version.h  c_console.c  c_console.h  c_llm.c  d_deh.c  d_deh.h  d_englsh.h  d_event.h  d_items.h  d_main.c  d_net.c  d_player.h  doomdata.h  doomdef.c  doomdef.h  doomstat.h  doomtype.h  dsdhacked.c  dstrings.h  dstrings_bex.h  f_finale.c  f_wipe.c  freedoom.c  freedoom.h  g_agent.c  g_agent.h  g_game.c  heretic.c  heretic.h  hexen.c  hexen.h  hu_buddy.c  (+105 more)
run/: README.md  aidoom.cfg.local  aidoom.wad  aidoom_voice_manifest.txt  buddy.wad  buddy_voice_manifest.txt  gpumon.py  llm_player.py  ollama_director.py  start_aibuddy.bat  start_aibuddy.sh  start_aidoom.bat  start_aidoom.ps1  start_aidoom.sh  start_buddy.bat  start_buddy.sh  start_connect.sh  start_llm_player.sh
run/ID0/: aidoom.wad  e1-arenas.wad
tools/: Makefile.msvc  aicoop_config.c  aicoop_config.rc  aidoom_config.c  aidoom_config.rc  bake_buddy_face.py  bake_buddy_voice.py  bake_buddydoom_icon.py  bake_font.py  bake_secdrone.py  buddy_voice.py  buddydoom_config.c  buddydoom_config.rc  build_aicoop.sh  build_aicoop_win.sh  build_config.sh  build_config_win.sh  build_director.sh  build_director_win.sh  build_extractor.sh  build_extractor_win.sh  build_gpumon.sh  build_gpumon_win.sh  build_launcher.sh  build_launcher_win.sh  director.c  director.rc  extract_doom2.py  extract_freedoom2.py  extract_game_assets.py  extract_heretic_monsters.py  extract_hexen.py  extractor.c  extractor.rc  font_atlas.h  gen_id24.py  gpumon.rc  gpumon_sdl.c  hero_launcher_img.h  hexen_sprite_map.txt  (+5 more)
tools/scripts/: start_aibuddy.bat  start_aibuddy.sh  start_aidoom.bat  start_aidoom.ps1  start_aidoom.sh  start_buddy.bat  start_buddy.sh  start_buddydoom.bat  start_buddydoom.ps1  start_buddydoom.sh  start_connect.bat  start_connect.sh
